opal/static/css/opal.css
/* Bootstrap resets */
html, .outer-container, .container{
    height: 100%;
}

body {
    font-family: 'Lato', sans-serif;
    background: #e7ebee;
    height: calc(100% - 50px);
}
a {
    -o-transition:.5s;
    -ms-transition:.5s;
    -moz-transition:.5s;
    -webkit-transition:.5s;
    transition:.5s;
    color: rgb(77, 77, 77);
}
p a, .orange-link { color: #f76c51; }
.pagination > .active > a{
    background-color: #f76447;
    border-color: #f76447;
}

.pagination > li > a{
    color: #f76447;
    cursor: pointer;
}

a:hover { color: #337fb2; }
.form-horizontal .control-label.text-left { text-align: left; }
.nav-tabs li:hover { cursor: pointer; }
/* Our Utility classes */
h1.larger { font-size: 52px; }
.italic{ font-style: italic; }
.pointer:hover { cursor: pointer; }
.push-left-12 { margin-left: 12px; }
.push-left-8per { margin-left: 8%; }
.underline { text-decoration: underline; }
.break-word { word-wrap: break-word; }
.row.spaced {
    margin-bottom: 12px;
    width: 100%;
    padding-left: 1%;
}
.box {
    padding-top: 12px;
    border: 1px solid #bbb;
}
.content-offset { margin-top: 50px; }
.content-offset-25 { margin-top: 25px; }
.content-offset-20{
    margin-top: 20px;
}
.content-offset-below-20 {
    margin-bottom: 20px;
}
.content-offset-10{
    margin-top: 10px;
}
.content-offset-below-10 {
    margin-bottom: 10px;
}
.content-offset-75 {margin-top: 75px; }
.content-centered { padding-top: 20%; height: 100%; }
.heading { position: fixed; top: 50px; width: 100%; z-index: 3; }
.headed-content-offset { margin-top: 150px; }

/* Generic Colours */
.bg-primary h1 small { color: #eff; }
.bg-white {
    background-color: white;
}
.bg-primary {
    color: white;
    background-color: #9cc96b; /* Green */
}

.panel-primary .panel-default .panel-heading.bg-secondary,
.bg-secondary {
    background-color: #f76c51; /* red */
    border-bottom: none;
    color: white;
}

.panel-primary .panel-default .panel-heading.bg-active,
.bg-active {
    background-color: #5fa2dd; /* Blue */
    border-bottom: none;
    color: white;
}
.panel.panel-primary {
    border-color: #9cc96b; /* Green */
}

.panel.panel-primary .panel-heading {
    color: white;
    border-color: #9cc96b; /* Green */
    background-color: #5fa2dd; /* Blue */
    background-color: #f76c51; /* red */
    background-color: #9cc96b; /* Green */
}

.btn-primary {
    -o-transition:.5s;
    -ms-transition:.5s;
    -moz-transition:.5s;
    -webkit-transition:.5s;
    transition:.5s;

   background-color: #9cc96b; /* Green */
   border-color: #9cc96b; /* Green */
 }
.btn-primary:hover,
.btn-primary:focus {
    background-color: #87bd4b;
    border-color: #87bd4b;
}

.btn-secondary {

    -o-transition:.5s;
    -ms-transition:.5s;
    -moz-transition:.5s;
    -webkit-transition:.5s;
    transition:.5s;
    background-color: #f76447;
    border-color: #f76c51;
    color: #fff
}
.btn-secondary:hover,
.btn-secondary:focus {
    background-color: #f54928;
    border-color: #f54f2f;
    color: #fff
}
@media screen  {
    .patient-list-container {
        height: 760px;
        overflow: scroll;
    }
}
table.patient-list tr th { white-space: nowrap; }

/* Selected sub-cell - list view */
li.selected {
	background-color: #9cc96b;  /* Green*/
    background-color: #5fa2dd; /* Blue */
}

tr.selected {
	border-top: 3px solid #5fa2dd;
	border-bottom: 3px solid #5fa2dd;
}

/* Login */
.login img { height: 60px; margin-top: -12px; padding-right: 4px; float: right; opacity: 0.7; }
.login {
    -o-transition:.4s;
    -ms-transition:.4s;
    -moz-transition:.4s;
    -webkit-transition:.4s;
    transition:.4s;
}
.login.submitted { margin-top: -2750px; }

/** Navbar **/
#main-navbar {
    color: #8a6d3b;
    padding: 0px;
    background-color: white;
    border-bottom: 1px solid black;
}
.navbar-brand img { height: 30px; margin-top: -12px; padding-right: 4px; }

.navbar-nav li:hover,
.navbar-nav li:hover a,
.navbar-nav li.active a,
.navbar-nav li.active{
	background: #f76c51;
    color: white;
}
.navbar li {
    padding: 0px;
}
.navbar i { font-size: 18px; }

/* Growl messages */
.growl-container.growl-fixed.top-right {
  top: 54px;
  right: 2px;
}

/* Forms */

.form-horizontal .checkbox {
  padding-left: 28px;
  padding-bottom: 12px;
}
.form-horizontal .checkbox label {
    font-weight: bold;
}
/* Detail page & panels */
.col-md-9.box { width: 74%; margin-right: 1%; }
i.edit,
i.delete,
.detail .panel-heading i { font-size: 28px; }

.list-group-item .btn i { font-size: 20px; }

.panel-primary .panel-default .panel-heading,
.panel-default .panel-heading {
    border-bottom: 3px solid #f76c51;
    background-color: white;
    color: #333;
}
.panel-active .panel-heading {
    border-bottom: 3px solid #5fa2dd; /* Blue */
}
.panel-heading h3 { margin-top: 0px; margin-bottom: 0px; font-weight: normal;}
.panel-heading i.edit,
.list-group-item i.edit,
.list-group-item i.delete{ display:none }
.panel-heading:hover i.edit,
.list-group-item:hover i.edit,
.list-group-item:hover i.delete{ display: block; }
.panel-heading i:hover,
.detail .list-group-item i:hover { cursor: pointer; color: rgb(60, 118, 61); }
.detail .list-group-item i.delete:hover { cursor: pointer; color: rgb(169, 68, 66); }
.list-group-item { min-height: 50px; }


/* ngProgress overrides */
.ngProgressLiteBar {
  background-color: firebrick;
  box-shadow: 0 0 10px 0; /* Inherits the font color */
  top: 50px;
}

.ngProgressLite .ngProgressLiteBarShadow {
  display: none;
}


/* Animations: sliding dropdown menus */

.open > .dropdown-menu.slides {
  -webkit-transform: scale(1, 1);
  transform: scale(1, 1);

}
.open > .dropdown-menu.slides li a {
  color: #000;
}
.dropdown-menu.slides li a{
  color: #fff;
}
.dropdown-menu.slides {
  -webkit-transform-origin: top;
  transform-origin: top;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-transform: scale(1, 0);
  transform: scale(1, 0);
  display: block;

  transition: all 0.2s ease-out;
  -webkit-transition: all 0.2s ease-out;
}
.dropup .dropdown-menu.slides {
  -webkit-transform-origin: bottom;
  transform-origin: bottom;
}

.navbar .nav > li > .dropdown-menu.slides:after {

}
.dropup > .dropdown-menu.slides:after {
  border-bottom: 0;
  border-top: 6px solid rgba(39, 45, 51, 0.9);
  top: auto;
  display: inline-block;
  bottom: -6px;
  content: '';
  position: absolute;
  left: 50%;
  border-right: 6px solid transparent;
  border-left: 6px solid transparent;
}



/* Old, uncleaned styles */

ul {
	margin-left: 0;
	margin-bottom: 0;
    padding-left: 0px
}

li {
	list-style: none;
	padding: 4px;
}

li li {
	padding-top: 0px;
	padding-bottom: 0px;
}

.modal-header {
    /* padding: 0px 0px 0px 15px; */
    background: #9cc96b;
    color: white;
}

table { font-size: 12px; }

.table.search tbody tr td { padding: 8px; }

input.ng-invalid.ng-dirty { background-color : #fcc; }

#subtags {
    margin-left: 304px;
	border-bottom: none;
}

.datepicker table tr td span {
	height: 20px;
	line-height: 12px;
}

.edit_item:hover {
    background-color: #f76c51; /* red */
    color: white;
    cursor: pointer;
}

.dropdown-menu { z-index: 1060; }

.timeline {
  position: relative;
  padding-bottom: 1px;
}

.timeline .timeline-now:first-child {
  margin-bottom: 30px;
  margin-top: 15px;
}

.timeline-now {
  clear: both;
  margin-bottom: 50px;
  margin-top: 50px;
  position: relative;
}

.timeline-now .timeline-now-text {
  display: inline-block;
  text-align: center;
  padding: 7px 15px;
  min-width: 100px;
}

.timeline-item {
  margin-bottom: 50px;
  margin-top: 5px;
  position: relative;
  clear: both;
}

.timeline-label {
  width: 100px;
  float: left;
  text-align: center;
  padding-bottom: 15px;
}

.timeline-icon {
  border-radius: 50%;
  box-shadow: 0 0 0 7px #e7ebee;
  display: block;
  margin: 0 auto;
  height: 50px;
  line-height: 50px;
  text-align: center;
  width: 50px;
}

.timeline-time {
  display: inline-block;
  padding: 5px 3px 7px;
  margin-top: 3px;
  background-color: #e7ebee;
  font-size: 12px;
  max-width: 70px;
}

.timeline-detail {
  border-radius: 0;
  margin-left: 110px;
  top: -7px;
  padding: 10px;
  position: relative;
  min-height: 50px;
  border: 1px solid #e9e9e9;
  font-size: 18px;
}

.timeline:before {
  left: 49px;
  top: 20px;
  width: 2px;
}

.timeline:before, .timeline:after {
  background-color: #cad3df;
  bottom: 20px;
  content: "";
  display: block;
  position: absolute;
}

.saved-search:hover{
  color: #333;
}

.saved-search{
  font-size: 30px;
  margin-right: 10px;
}

.search-panel.panel{
    height: 100%;
    padding-bottom: 0;
    margin-bottom: 0;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

